# Process this file with autoconf to produce a configure script.
AC_INIT([ctorrent], [1.3.2], [bsdi@sina.com])
		    
AM_INIT_AUTOMAKE(ctorrent,1.3.2)
AM_CONFIG_HEADER([config.h])

AC_CONFIG_SRCDIR([ctorrent.cpp])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([ssl],[SHA1_Init],,
	[AC_CHECK_LIB([crypt],[SHA1_Init],,
	[AC_CHECK_LIB([md],[SHA1_Init],,
	[AC_MSG_ERROR([error, Please install OpenSSL first!])])])])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
	
#AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/param.h sys/socket.h sys/time.h unistd.h])

AC_CHECK_HEADER([openssl/sha.h],,[AC_MSG_ERROR([Error, OpenSSL header file sha.h not found.])])
						       
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([ftruncate getcwd inet_ntoa memset select strncasecmp strtol strnstr])

#AC_CONFIG_FILES(Makefile)			  
AC_OUTPUT(Makefile)
